--- a/Notebook/index.ipynb
+++ b/Notebook/index.ipynb
@@ -29,11 +29,21 @@
    "source": [
     "# Victor "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ec1ac84b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
